[gd_scene load_steps=3 format=2]

[ext_resource path="res://content/gui/overlays/menus/GameMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/Consolas.tres" type="DynamicFont" id=4]

[node name="GameMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 768.0
margin_bottom = 1408.0
mouse_filter = 2
color = Color( 0.257813, 0.257813, 0.257813, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="Background"]
margin_right = 768.0
margin_bottom = 1365.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Background/Margin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 748.0
margin_bottom = 1345.0
custom_constants/separation = 150
alignment = 1

[node name="ContinueButton" type="Button" parent="Background/Margin/VBox"]
margin_top = 42.0
margin_right = 728.0
margin_bottom = 170.0
rect_min_size = Vector2( 0, 128 )
custom_fonts/font = ExtResource( 4 )
action_mode = 0
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfigButton" type="Button" parent="Background/Margin/VBox"]
margin_top = 320.0
margin_right = 728.0
margin_bottom = 448.0
rect_min_size = Vector2( 0, 128 )
custom_fonts/font = ExtResource( 4 )
action_mode = 0
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugCitizenRecordButton" type="Button" parent="Background/Margin/VBox"]
margin_top = 598.0
margin_right = 728.0
margin_bottom = 726.0
rect_min_size = Vector2( 0, 128 )
custom_fonts/font = ExtResource( 4 )
action_mode = 0
text = "Citizen Record"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="Button" parent="Background/Margin/VBox"]
margin_top = 876.0
margin_right = 728.0
margin_bottom = 1004.0
rect_min_size = Vector2( 0, 128 )
custom_fonts/font = ExtResource( 4 )
action_mode = 0
text = "New Game & Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="Background/Margin/VBox"]
margin_top = 1154.0
margin_right = 728.0
margin_bottom = 1282.0
rect_min_size = Vector2( 0, 128 )
custom_fonts/font = ExtResource( 4 )
action_mode = 0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="CanvasLayer"]
margin_right = 498.0
margin_bottom = 140.0
rect_min_size = Vector2( 400, 140 )
popup_exclusive = true
window_title = "Sure...?"
dialog_text = "Do you really want to start a new game? Your current savegame will be lost."

[connection signal="pressed" from="Background/Margin/VBox/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="Background/Margin/VBox/ConfigButton" to="." method="_on_ConfigButton_pressed"]
[connection signal="pressed" from="Background/Margin/VBox/DebugCitizenRecordButton" to="." method="_on_DebugCitizenRecordButton_pressed"]
[connection signal="pressed" from="Background/Margin/VBox/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="Background/Margin/VBox/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="confirmed" from="CanvasLayer/ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
